ansible/resources/kubernetes/dns-utils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-utils
spec:
  containers:
    - name: dns-utils
      image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
      command:
        - sleep
        - "infinity"
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
