ansible/resources/kubernetes/mongodb-v4.4.13.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  # [ALTERNATIVE COMMAND] > kubectl create namespace [NAMESPACE]
  name: mongodb-staging
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml
  labels:
    name: mongodb-staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-staging
  namespace: mongodb-staging
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.13
          ports:
            # @description: Database Application Exposed via Custom HTTP Port::27017
            - containerPort: 27017
          volumeMounts:
            - name: database
              mountPath: /data/db/
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-staging
  namespace: mongodb-staging
spec:
  selector:
    app: mongodb
  ports:
    # [[PROVIDE SERVICE-NAME WITHIN MULTIPLE SERVICES ENTRY-POINT]] >> @see {@link https://www.youtube.com/watch?v=T4Z7visMM4E&t=766s}
    - name: mongodb
      protocol: TCP
      # [Kubernetes Cluster] - Service Port.
      port: 27017
      # [Kubernetes Cluster] - Deployment (Pods) Port.
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-staging
  namespace: mongodb-staging
  labels:
    app: mongo-express
spec:
  replicas: 1
  # [DISPLAY PODS COMMAND] > kubectl get pod --namespace=mongodb-staging
  selector:
    matchLabels:
      app: mongo-express
  template:
    # [DISPLAY PODS LOGGER COMMAND] > kubectl logs <POD_NAME> --namespace=mongodb-staging
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:0.54.0
          ports:
            # @description: Docker Application User Interface Exposed via Default HTTP Port::80
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  # [ALTERNATIVE COMMAND] > kubectl apply --filename *.yaml --namespace=mongodb-staging
  namespace: mongodb-staging
spec:
  selector:
    app: mongo-express
  ports:
    # [[PROVIDE SERVICE-NAME WITHIN MULTIPLE SERVICES ENTRY-POINT]] >> @see {@link https://www.youtube.com/watch?v=T4Z7visMM4E&t=766s}
    - name: mongo-express
      protocol: TCP
      # [Kubernetes Cluster] - Service Port.
      port: 27027
      # [Kubernetes Cluster] - Deployment (Pods) Port.
      targetPort: 80

#  ---
#  apiVersion: cert-manager.io/v1
#  kind: Certificate
#  metadata:
#    name: mongo-express
#    # @describe: `kubectl describe certificate --namespace mongodb-staging`.
#    # @describe: `kubectl get secrets --namespace mongodb-staging`.
#    namespace: mongodb-staging
#  spec:
#    dnsNames:
#      - mongo-express.e8s.io
#    secretName: mongo-express-tls
#    issuerRef:
#      name: letsencrypt-production
#      kind: ClusterIssuer

#  ---
#  apiVersion: cert-manager.io/v1
#  kind: Certificate
#  metadata:
#    name: mongo-dashboard
#    # @describe: `kubectl describe certificate --namespace mongodb-staging`.
#    # @describe: `kubectl get secrets --namespace mongodb-staging`.
#    namespace: mongodb-staging
#  spec:
#    dnsNames:
#      - mongo-dashboard.e8s.io
#    secretName: mongo-dashboard-tls
#    issuerRef:
#      name: letsencrypt-production
#      kind: ClusterIssuer

# ----------------------------------------------------------------------------------------------------------------------------------------------------
# @description: Deploying multiple Ingress controllers will result in all controllers simultaneously racing to update Ingress status in confusing ways.
# @see {@link https://kubernetes.github.io/ingress-nginx/user-guide/multiple-ingress/}.
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# @solution: Declare explicit IngressClasses to fix this problem.
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# * Using ${annotation} [kubernetes.io/ingress.class]
# * Using ${properties} [ingress.spec.ingressClassName]
# ----------------------------------------------------------------------------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  namespace: mongodb-staging
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  # @description: Ingress Rules: Wildcard & Specific Sub-Domain.
  # @see {@link https://stackoverflow.com/questions/52328483/kubernetes-ingress-rules-how-to-use-wildcard-and-specific-subdomain-together}.
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  annotations:
    kubernetes.io/tls-acme: "true"
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # @deprecated: Deprecated from Kubernetes v1.18+.
    # @see {@link https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/}.
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # kubernetes.io/ingress.class: nginx
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    ingress.kubernetes.io/class-name: nginx
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    # @deprecated: {@resource: [nginx.ingress.kubernetes.io/add-base-url]} from NGINX Ingress Controller.
    # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
    # ------------------------------------------------------------------------------------------------------------------------------------------------
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  # @see {@link https://stackoverflow.com/questions/72932892/class-name-shows-none-for-ingress-object-in-local-kubernetes}.
  # @see {@link https://kubernetes.io/docs/concepts/services-networking/ingress/#deprecated-annotation}.
  # --------------------------------------------------------------------------------------------------------------------------------------------------
  ingressClassName: nginx # Display [<CLASS>:nginx]
  tls:
    - hosts:
        - mongodb.e8s.io
      secretName: wildcard-mongodb-tls
    - hosts:
        - express.mongodb.e8s.io
      secretName: wildcard-mongodb-tls
    - hosts:
        - dashboard.mongodb.e8s.io
      secretName: wildcard-mongodb-tls
  rules:
    - host: mongodb.e8s.io
      http:
        paths:
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}
          # @deprecated: [- path: /mongo-express]
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 27027
    - host: express.mongodb.e8s.io
      http:
        paths:
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
          # @see {@link https://stackoverflow.com/questions/5462897/url-rewriting-broke-link-to-css}.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/333}.
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @deprecated: [- path: /mongo-express]
          # ------------------------------------------------------------------------------------------------------------------------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 27027
    - host: dashboard.mongodb.e8s.io
      http:
        paths:
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @description: In case ${path} differ from ${rewrite-target}. All the following JS, CSS resources would have not been served correctly.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/3770#issuecomment-464449348}.
          # @see {@link https://stackoverflow.com/questions/5462897/url-rewriting-broke-link-to-css}.
          # @see {@link https://github.com/kubernetes/ingress-nginx/issues/333}.
          # ------------------------------------------------------------------------------------------------------------------------------------------
          # @deprecated: [- path: /mongo-express]
          # ------------------------------------------------------------------------------------------------------------------------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 27027
